Fix sidebar overflow

--- a/app/app.css
+++ b/app/app.css
@@ -88,6 +88,7 @@ html, body, .eol-container {
   background-color: #53585F;
   padding: 40px;
   float: left;
+  overflow-y: scroll;
 }
 
 .eol-filter {
